
- "Declare ML Module" now allows us to import .cma files. This avoids to use a
   bunch of "Declare ML Module" statements when using several ML files.
- "Set Printing Width n" added, allows to change the size of width printing
   (TODO : doc).
- "Implicit Variables Type x,y:t" assigns default types for binding variables.
- "Set Implicits Printing" disable printing of implicit arguments

Gallina

- New syntax of the form "Inductive bool : Set := true, false : bool." for
  enumerated types

Implicit arguments

- Inductive in sections declared with implicits now "discharged" with
  implicits (like constants and variables)
- Set Implicit Arguments is strict by default in new syntax
- Implicit Arguments flags are now synchronous with reset
- New switch "Unset/Set Printing Implicits" to globally control
  printing of implicits

Grammar extensions

- UTF-8 encoded unicode blocks 0380-03FF (greek letters) and 2100-214F
  (letter-like, including aleph and double N,Z,Q,R) are supported
  identifiers; UTF-8 unicode blocs 2200-22FF (mathematical operators),
  2A00-2AFF (supplemental mathematical operators) 2300-23FF
  (miscellaneous technical, including sqrt symbol), 2600-26FF
  (miscellaneous symbols) 2190-21FF (arrows A) and 2900-297F (arrows B)
  are supported symbols

Library

- New file about the factorial function in Arith
- Variables names of iff_trans changed (source of incompatibilities)

Tactic language

- Fail tactic now accepts a failure message
- New primitive tactic "FreshId" to generate new names
- Debugger prints levels of calls

Tactics

- Replace can now replace proofs also
- Fail levels are now decremented at "Match Context" blocks only and
  if the right-hand-side of "Match term With" are tactics, these
  tactics are never evaluated immediately and do not induce
  backtracking (in contrast with "Match Context")
- Quantified names now avoid global names of the current module (like
  Intro names did) [source of rare incompatibilities: 2 changes in the set of