@@ -28,5 +28,5 @@ val h_destructConcl : tactic
 val h_auto_tdb : int option -> tactic
 
 val add_destructor_hint :
-  identifier -> (bool,unit) Tacexpr.location ->
+  Vernacexpr.locality_flag -> identifier -> (bool,unit) Tacexpr.location ->
     Topconstr.constr_expr -> int -> raw_tactic_expr -> unit
