@@ -155,7 +155,7 @@ let pr_opt_hintbases l = match l with
   | [] -> mt()
   | _ as z -> str":" ++ spc() ++ prlist_with_sep sep str z
 
-let pr_hints db h pr_c = 
+let pr_hints local db h pr_c = 
   let db_name = function
     | [] -> (false , mt())
     | c1::c2 -> match c1 with
@@ -169,38 +169,42 @@ let pr_hints db h pr_c =
     | HintsResolve l ->
         let (f,dbn) = db_name l in
         if f then
-          hov 1 (str"Hint " ++ dbn ++ spc() ++ opth ++
+          hov 1 (str"Hint " ++ pr_locality local ++ dbn ++ spc() ++ opth ++
                  str" :=" ++ spc() ++ str"Resolve" ++ spc() ++
                  prlist_with_sep sep pr_c (List.map (fun (_,y) -> y) l))
         else hov 1
-          (str"Hints Resolve " ++
+          (str"Hints " ++ pr_locality local ++ str "Resolve " ++
           prlist_with_sep sep pr_aux
             (List.map (fun (_,y) -> y) l) ++ spc() ++ opth)
     | HintsImmediate l ->
         let (f,dbn) = db_name l in
         if f then
-          hov 1 (str"Hint " ++ dbn ++ spc() ++ opth ++
+          hov 1 (str"Hint " ++ pr_locality local ++ dbn ++ spc() ++ opth ++
                  str" :=" ++ spc() ++ str"Immediate" ++ spc() ++
                  prlist_with_sep sep pr_c (List.map (fun (_,y) -> y) l))
         else hov 1
-          (str"Hints Immediate " ++
+          (str"Hints " ++ pr_locality local ++ str "Immediate " ++
            prlist_with_sep sep pr_aux
             (List.map (fun (_,y) -> y) l) ++ spc() ++ opth)
     | HintsUnfold l ->
         let (f,dbn) = db_name l in
         if f then
-          hov 1 (str"Hint" ++ spc() ++ dbn ++ spc() ++ opth ++
+          hov 1 (str"Hint" ++ spc() ++ pr_locality local ++ 
+	         dbn ++ spc() ++ opth ++
                  str" :=" ++ spc() ++ str"Unfold" ++ spc() ++
                  prlist_with_sep sep pr_reference
                    (List.map snd l))
         else hov 1
-          (str"Hints Unfold " ++ prlist_with_sep sep pr_reference
+          (str"Hints " ++ pr_locality local ++ str "Unfold " ++
+	    prlist_with_sep sep pr_reference
             (List.map snd l) ++ spc() ++ opth)
     | HintsConstructors (n,c) ->
-        hov 1 (str"Hint " ++ pr_id n ++ spc() ++ opth ++ str" :=" ++
+        hov 1 (str"Hint " ++ pr_locality local ++ 
+	       pr_id n ++ spc() ++ opth ++ str" :=" ++
                spc() ++ str"Constructors" ++ spc() ++ pr_reference c) 
     | HintsExtern (name,n,c,tac) ->
-        hov 1 (str"Hint " ++ pr_id name ++ spc() ++ opth ++ str" :=" ++
+        hov 1 (str"Hint " ++ pr_locality local ++ 
+	       pr_id name ++ spc() ++ opth ++ str" :=" ++
                spc() ++ str"Extern " ++ int n ++ spc() ++ pr_c c ++
                spc() ++ pr_raw_tactic tac)
  
@@ -818,9 +822,10 @@ let rec pr_vernac = function
 	  str "Tactic Definition " else
 	    (* Rec by default *) str "Ltac ") ++
         prlist_with_sep (fun () -> fnl() ++ str"with ") pr_tac_body l)
-  | VernacHints (dbnames,h) -> pr_hints dbnames h pr_constr
-  | VernacHintDestruct (id,loc,c,i,tac) ->
-      hov 2 (str"HintDestruct " ++ pr_destruct_location loc ++ spc() ++
+  | VernacHints (local,dbnames,h) -> pr_hints local dbnames h pr_constr
+  | VernacHintDestruct (local,id,loc,c,i,tac) ->
+      hov 2 (str"HintDestruct " ++ pr_locality local ++ 
+      pr_destruct_location loc ++ spc() ++
       pr_id id ++ pr_constrarg c ++ pr_intarg i ++ spc() ++
       str"[" ++ pr_raw_tactic tac ++ str"]")
   | VernacSyntacticDefinition (id,c,None) ->
